# ServerChat

./: ReadMe.md
client/: CMakeLists.txt
client/src/: GeneralChat.cpp  GeneralChat.hpp  ScreenView.hpp  main.cpp
client/src/help/: HelpOrigin.hpp  HelpScreen.cpp  HelpScreen.hpp
client/src/privateChat/: PrivateChat.cpp  PrivateChat.hpp
